force-app/main/default/objects/Part_Inventory__c/fields/Qty_in_Stock__c.field-meta.xml
<CustomField>
    <fullName>Qty_in_Stock__c</fullName>
    <formula>Quantity_Purchased__c -  Qty_Utilized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty in Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>