force-app/main/default/objects/Part_Inventory__c/fields/Qty_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Qty_Utilized__c</fullName>
    <label>Qty Utilized</label>
    <summarizedField>Maintenance_Part__c.Qty_Utilized__c</summarizedField>
    <summaryForeignKey>Maintenance_Part__c.Part_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>