force-app/main/default/objects/Part_Inventory__c/fields/Quantity_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Purchased__c</fullName>
    <label>Quantity Purchased</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>