force-app/main/default/objects/Part_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Part__c</columns>
    <columns>Part_Name__c</columns>
    <columns>Qty_in_Stock__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>